Application Support/Code/logs/20230126T201955/window1/exthost/output_logging_20230126T202018/4-isort.log
Name: isort
Module: isort
Python extension loading
Waiting for interpreter from python extension.
Python extension loaded
  File "/Users/rafaelsouza/.vscode/extensions/ms-python.isort-2022.8.0/bundled/tool/server.py", line 19
    def update_sys_path(path_to_add: str, strategy: str) -> None:
                                   ^
SyntaxError: invalid syntax
[Info  - 8:31:47 PM] Connection to server got closed. Server will restart.
  File "/Users/rafaelsouza/.vscode/extensions/ms-python.isort-2022.8.0/bundled/tool/server.py", line 19
    def update_sys_path(path_to_add: str, strategy: str) -> None:
                                   ^
SyntaxError: invalid syntax
[Info  - 8:31:47 PM] Connection to server got closed. Server will restart.
  File "/Users/rafaelsouza/.vscode/extensions/ms-python.isort-2022.8.0/bundled/tool/server.py", line 19
    def update_sys_path(path_to_add: str, strategy: str) -> None:
                                   ^
SyntaxError: invalid syntax
[Info  - 8:31:47 PM] Connection to server got closed. Server will restart.
  File "/Users/rafaelsouza/.vscode/extensions/ms-python.isort-2022.8.0/bundled/tool/server.py", line 19
    def update_sys_path(path_to_add: str, strategy: str) -> None:
                                   ^
SyntaxError: invalid syntax
[Info  - 8:31:47 PM] Connection to server got closed. Server will restart.
  File "/Users/rafaelsouza/.vscode/extensions/ms-python.isort-2022.8.0/bundled/tool/server.py", line 19
    def update_sys_path(path_to_add: str, strategy: str) -> None:
                                   ^
SyntaxError: invalid syntax
[Error - 8:31:47 PM] Connection to server got closed. Server will not be restarted.
